--- a/ExampleProyect/ExampleProyect/Base.lproj/Main.storyboard
+++ b/ExampleProyect/ExampleProyect/Base.lproj/Main.storyboard
@@ -16,18 +16,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hBw-Wz-yhy">
-                                <rect key="frame" x="130" y="409" width="134" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hBw-Wz-yhy">
+                                <rect key="frame" x="129.66666666666663" y="612" width="134" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Cambiar Texto"/>
                                 <connections>
                                     <action selector="cambiarTexto:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ngt-EH-6A1"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hola Mundo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vAs-KD-kOn">
-                                <rect key="frame" x="16" y="200" width="377" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hola Mundo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vAs-KD-kOn">
+                                <rect key="frame" x="150.66666666666663" y="415.66666666666669" width="92.000000000000028" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -35,6 +33,12 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="vAs-KD-kOn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Fnr-gx-RM0"/>
+                            <constraint firstItem="vAs-KD-kOn" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="WvV-Z5-JHo"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="hBw-Wz-yhy" secondAttribute="bottom" constant="171" id="e9b-q7-HXV"/>
+                            <constraint firstItem="hBw-Wz-yhy" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="hYq-e5-f2y"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="etiqueta" destination="vAs-KD-kOn" id="KjB-XF-WLi"/>
