--- a/ControlsAndTextViews/ControlsAndTextViews/Base.lproj/Main.storyboard
+++ b/ControlsAndTextViews/ControlsAndTextViews/Base.lproj/Main.storyboard
@@ -24,17 +24,27 @@
                                     <action selector="myButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5g9-uB-crG"/>
                                 </connections>
                             </button>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uWX-7A-3Tu">
+                                <rect key="frame" x="0.0" y="154" width="393" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="Wvt-9U-vYT"/>
+                                </constraints>
+                            </pickerView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="BDI-K8-CwK" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="2ya-n9-ymp"/>
+                            <constraint firstItem="uWX-7A-3Tu" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="F7L-BW-7Lf"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="BDI-K8-CwK" secondAttribute="trailing" constant="20" id="FO1-qd-gNt"/>
                             <constraint firstItem="BDI-K8-CwK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="g8p-Jp-8a9"/>
+                            <constraint firstItem="uWX-7A-3Tu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="tAq-We-8yC"/>
+                            <constraint firstItem="uWX-7A-3Tu" firstAttribute="top" secondItem="BDI-K8-CwK" secondAttribute="bottom" constant="20" id="wAt-zA-GRY"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="myButton" destination="BDI-K8-CwK" id="ya2-7B-DDz"/>
+                        <outlet property="myPickerView" destination="uWX-7A-3Tu" id="td2-w9-5Li"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
