--- a/ControlsAndTextViews/ControlsAndTextViews/Base.lproj/Main.storyboard
+++ b/ControlsAndTextViews/ControlsAndTextViews/Base.lproj/Main.storyboard
@@ -52,10 +52,17 @@
                                     <action selector="mySliderAction:" destination="BYZ-38-t0r" eventType="valueChanged" id="ffd-gA-0UE"/>
                                 </connections>
                             </slider>
+                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="Exs-DV-55I">
+                                <rect key="frame" x="149.66666666666666" y="449" width="94" height="32"/>
+                                <connections>
+                                    <action selector="myStepperAction:" destination="BYZ-38-t0r" eventType="valueChanged" id="ovc-A3-yVa"/>
+                                </connections>
+                            </stepper>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="Exs-DV-55I" firstAttribute="top" secondItem="PCI-fP-fWk" secondAttribute="bottom" constant="24" id="0pm-EP-JzK"/>
                             <constraint firstItem="BDI-K8-CwK" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="2ya-n9-ymp"/>
                             <constraint firstItem="uWX-7A-3Tu" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="F7L-BW-7Lf"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="BDI-K8-CwK" secondAttribute="trailing" constant="20" id="FO1-qd-gNt"/>
@@ -71,6 +78,7 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="PCI-fP-fWk" secondAttribute="trailing" constant="24" id="sjl-55-Y20"/>
                             <constraint firstItem="uWX-7A-3Tu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="tAq-We-8yC"/>
                             <constraint firstItem="uWX-7A-3Tu" firstAttribute="top" secondItem="BDI-K8-CwK" secondAttribute="bottom" constant="20" id="wAt-zA-GRY"/>
+                            <constraint firstItem="Exs-DV-55I" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="yrV-lk-r5c"/>
                         </constraints>
                     </view>
                     <connections>
@@ -79,6 +87,7 @@
                         <outlet property="myPickerView" destination="uWX-7A-3Tu" id="td2-w9-5Li"/>
                         <outlet property="mySegmentedControl" destination="TBU-HE-pME" id="FUl-4o-OFG"/>
                         <outlet property="mySlider" destination="PCI-fP-fWk" id="747-UW-tpN"/>
+                        <outlet property="myStepper" destination="Exs-DV-55I" id="b5K-Dn-Jrk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
