--- a/ControlsAndTextViews/ControlsAndTextViews/Base.lproj/Main.storyboard
+++ b/ControlsAndTextViews/ControlsAndTextViews/Base.lproj/Main.storyboard
@@ -54,16 +54,20 @@
                             </slider>
                             <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="Exs-DV-55I">
                                 <rect key="frame" x="149.66666666666666" y="449" width="94" height="32"/>
-                                <connections>
-                                    <action selector="myStepperAction:" destination="BYZ-38-t0r" eventType="valueChanged" id="ovc-A3-yVa"/>
-                                </connections>
                             </stepper>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Yt2-PK-bRs">
+                                <rect key="frame" x="172" y="505" width="51" height="31"/>
+                                <connections>
+                                    <action selector="mySwitchAction:" destination="BYZ-38-t0r" eventType="valueChanged" id="A70-ng-YMi"/>
+                                </connections>
+                            </switch>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="Exs-DV-55I" firstAttribute="top" secondItem="PCI-fP-fWk" secondAttribute="bottom" constant="24" id="0pm-EP-JzK"/>
                             <constraint firstItem="BDI-K8-CwK" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="2ya-n9-ymp"/>
+                            <constraint firstItem="Yt2-PK-bRs" firstAttribute="top" secondItem="Exs-DV-55I" secondAttribute="bottom" constant="24" id="7pQ-Ol-Zen"/>
                             <constraint firstItem="uWX-7A-3Tu" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="F7L-BW-7Lf"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="BDI-K8-CwK" secondAttribute="trailing" constant="20" id="FO1-qd-gNt"/>
                             <constraint firstItem="Zwm-0x-O7p" firstAttribute="top" secondItem="uWX-7A-3Tu" secondAttribute="bottom" constant="20" id="RrV-0T-Fwv"/>
@@ -75,6 +79,7 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="TBU-HE-pME" secondAttribute="trailing" constant="20" id="h9f-1p-jRl"/>
                             <constraint firstItem="PCI-fP-fWk" firstAttribute="top" secondItem="TBU-HE-pME" secondAttribute="bottom" constant="24" id="kBR-j1-4U2"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Zwm-0x-O7p" secondAttribute="trailing" constant="20" id="mrw-om-ftS"/>
+                            <constraint firstItem="Yt2-PK-bRs" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="r4A-1L-mbc"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="PCI-fP-fWk" secondAttribute="trailing" constant="24" id="sjl-55-Y20"/>
                             <constraint firstItem="uWX-7A-3Tu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="tAq-We-8yC"/>
                             <constraint firstItem="uWX-7A-3Tu" firstAttribute="top" secondItem="BDI-K8-CwK" secondAttribute="bottom" constant="20" id="wAt-zA-GRY"/>
@@ -88,6 +93,7 @@
                         <outlet property="mySegmentedControl" destination="TBU-HE-pME" id="FUl-4o-OFG"/>
                         <outlet property="mySlider" destination="PCI-fP-fWk" id="747-UW-tpN"/>
                         <outlet property="myStepper" destination="Exs-DV-55I" id="b5K-Dn-Jrk"/>
+                        <outlet property="mySwitch" destination="Yt2-PK-bRs" id="Fgi-Q6-9Hb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
