--- a/ExampleProyect/ExampleProyect/Base.lproj/Main.storyboard
+++ b/ExampleProyect/ExampleProyect/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,27 +18,32 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hBw-Wz-yhy">
-                                <rect key="frame" x="129.66666666666663" y="612.33333333333337" width="134" height="35"/>
+                                <rect key="frame" x="129.66666666666666" y="614" width="133.99999999999997" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Cambiar Texto"/>
+                                <variation key="heightClass=compact-widthClass=regular" insetsLayoutMarginsFromSafeArea="NO"/>
                                 <connections>
                                     <action selector="cambiarTexto:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ngt-EH-6A1"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hola Mundo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vAs-KD-kOn">
-                                <rect key="frame" x="150.66666666666663" y="415.66666666666669" width="92.000000000000028" height="21"/>
+                                <rect key="frame" x="150.66666666666666" y="416" width="92" height="20.333333333333371"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
+                                <variation key="heightClass=compact-widthClass=regular">
+                                    <fontDescription key="fontDescription" type="system" pointSize="37"/>
+                                    <color key="textColor" name="AccentColor"/>
+                                </variation>
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="hBw-Wz-yhy" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="0NM-z8-WII"/>
-                            <constraint firstItem="vAs-KD-kOn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Ikm-hD-g0h"/>
-                            <constraint firstItem="vAs-KD-kOn" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="QgT-xZ-Eky"/>
-                            <constraint firstItem="hBw-Wz-yhy" firstAttribute="top" secondItem="vAs-KD-kOn" secondAttribute="bottom" constant="175.66666666666663" id="XfE-HM-Tkb"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="hBw-Wz-yhy" secondAttribute="bottom" constant="169" id="7q3-a0-vZm"/>
+                            <constraint firstItem="hBw-Wz-yhy" firstAttribute="centerX" secondItem="vAs-KD-kOn" secondAttribute="centerX" id="LOp-tf-E1I"/>
+                            <constraint firstItem="vAs-KD-kOn" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="P6Z-nS-taN"/>
+                            <constraint firstItem="vAs-KD-kOn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jTG-t3-ehN"/>
                         </constraints>
                     </view>
                     <connections>
@@ -50,6 +56,9 @@
         </scene>
     </scenes>
     <resources>
+        <namedColor name="AccentColor">
+            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
